tdf#100412: Cope with recursive gdk_threads_enter/_leave

07157e644fa9666850767ff6bd54c1511167a0a2 "Keep track of ThreadsEnter/Leave
acquire counts per thread" was done under the assumption that these calls never
happen recursively, but tdf#100412 makes it look like such calls do happen, so
that in a pattern

  gdk_threads_enter
  gdk_threads_enter
  gdk_threads_leave
  gdk_threads_leave

the second gdk_threads_leave could find yieldCount non-zero.

Change-Id: If9837764d22473f21cf5b10d769929f3c86a0ba7
(cherry picked from commit ef1dc167cd3339b1e92d8e18b1f5c3c2cfbec6ab)
Reviewed-on: https://gerrit.libreoffice.org/26365
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Jenkins <ci@libreoffice.org>